--- a/Template/Home/siteMap.html
+++ b/Template/Home/siteMap.html
@@ -179,6 +179,8 @@
                 <li><a href="{% url 'Blogs' %}">Blogs</a>
                     <ul>
                         <li><a href="{% url 'Blogs' %}#blog-1">Creation of a Workflow Management System: A Case Study</a></li>
+                        <li><a href="{% url 'Blogs' %}#event_attended">Featured Event Highlights</a></li>
+                        <li><a href="{% url 'Blogs' %}#other_resources"> Our Valuable Resources</a></li>
                     </ul>
                 </li>
             </ul>
