Palavee Automation Event

--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -36,9 +36,9 @@
         <div id="carouselExampleControlsPC" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" style="position: relative;">
-                <img class="d-block w-100" src="{% static 'slider/event_technowin.png' %}" alt="Second slide">
+                {% comment %} <img class="d-block w-100" src="{% static 'slider/event_technowin.png' %}" alt="Second slide">
 
-                <!-- Book Now Button Positioned Bottom Left -->
+                
                 <a href="https://www.automationindiaexpo.com/visitor-registration" target="_blank"
                 style="
                         position: absolute;
@@ -46,21 +46,21 @@
                         left: 350px;
                         background-color: #2563eb;
                         color: #ffffff;
-                        padding: 10px 20px;
-                        font-size: 16px;
-                        font-weight: 600;
-                        border-radius: 6px;
-                        text-decoration: none;
-                        box-shadow: 0 4px 10px rgba(0,0,0);
-                        transition: background-color 0.3s ease;
-                    "
-                onmouseover="this.style.backgroundColor='#05248aff';"
-                onmouseout="this.style.backgroundColor='#041741ff';"
-                >
-                    <i class="fa-solid fa-ticket" style="margin-right: 8px;"></i> Book Now
-                </a>
-            </div>
-                <div class="carousel-item">
+                                padding: 10px 20px;
+                                font-size: 16px;
+                                font-weight: 600;
+                                border-radius: 6px;
+                                text-decoration: none;
+                                box-shadow: 0 4px 10px rgba(0,0,0);
+                                transition: background-color 0.3s ease;
+                            "
+                        onmouseover="this.style.backgroundColor='#05248aff';"
+                        onmouseout="this.style.backgroundColor='#041741ff';"
+                        >
+                            <i class="fa-solid fa-ticket" style="margin-right: 8px;"></i> Book Now
+                        </a>
+                    </div>
+                <div class="carousel-item"> {% endcomment %}
                     <img class="d-block w-100" src="{% static 'slider/1.png' %}" alt="First slide">
                     <div class="overlay-text animate__animated animate__backInLeft">We Provide</div>
                 </div>
@@ -122,9 +122,9 @@
         <div id="carouselExampleControlsMobile" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                <div class="carousel-item active" style="position: relative;">
-    <img class="d-block w-100" src="{% static 'slider/event_slider_mobile.png' %}" alt="First slide">
+    {% comment %} <img class="d-block w-100" src="{% static 'slider/event_slider_mobile.png' %}" alt="First slide">
 
-    <!-- Book Now Button Positioned Bottom Center -->
+   
     <a href="https://www.automationindiaexpo.com/visitor-registration" target="_blank"
        style="
            position: absolute;
@@ -148,7 +148,7 @@
     </a>
 </div>
 
-                <div class="carousel-item">
+                <div class="carousel-item"> {% endcomment %}
                     <img class="d-block w-100" src="{% static 'slider/M1.png' %}" alt="First slide">
                 </div>
                 <div class="carousel-item">
