--- a/Template/Shared/layout.html
+++ b/Template/Shared/layout.html
@@ -211,8 +211,8 @@
             </li>
 
             <li style="margin-top:2%;">
-                <a href="{% url 'AutomationExpo' %}" style="position: relative; display: inline-block; color: #FCAB32 !important;">
-                    Automation Expo 2025
+                <a href="{% url 'AutomationExpo' %}" style="position: relative; display: inline-block; color: #ff0202ff !important;">
+                    AI & Process Automation
                     <img src="{% static 'images/new.png' %}" alt="New" style="height: 30px; width: 30px; position: absolute; top: -10px; right: -40px;">
                 </a>
             </li>
