--- a/Template/Home/AutomationExpo.html
+++ b/Template/Home/AutomationExpo.html
@@ -1074,7 +1074,7 @@ configuration—ensuring our clients get future-proof solutions that evolve with
 
         <!-- Sub-item 1 -->
        <div class="process-suite-item">
-  <h4 class="process-suite-subtitle">Onsite Team Management and Manpower Management </h4>
+  <h4 class="process-suite-subtitle">HRMS & Onsite Team Management</h4>
   <p class="process-suite-text">
   Automates routine business workflows to reduce manual effort, improve accuracy, enhance productivity, and ensure seamless end-to-end process efficiency.
   </p>
